# SimpleRestaurantApi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-221b930632e3f15b8ba6e6fd9be01dccb66a7d4cb9e0ea7826faf0f5f6236c8a.json  query-3f19ecac92cf356c5992096178f345670d8dd4673e2d8abd7d96cb1ab587afb3.json  query-5b963c40952f93fd9823e3fb9ae59609c57b79da177685a674f0e3cf5c293a89.json  query-5d85ca14b001366d141d210098d1ff66780f1785fa50e1f7f4d3a9bf9c3df9f9.json  query-809c1273b85fa5d7107a8cbb8c2291af43c71697863b7b070c024ad3ccdb5c9f.json  query-82c9334e73a26c76c7d36810bc8e08448564612d4f19aaca3f384839f849b7eb.json  query-d56016c4878567722214359920308f2aa2bde59d240fb6b94e4a8a181e60417d.json  query-dda69d9fbaaffafa2b659b9938052f977fa39144aff25d7d6c8fa9577e119460.json
dev_docs/: dev_database_setup.md
migrations/: 20231129195332_init.sql
src/: constants.rs  domain.rs  lib.rs  main.rs  presentation.rs  repository.rs  tests.rs
tests/: clients_simulation.rs
